--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@tanstack/react-query": "^4.36.1",
     "axios": "^1.7.9",
+    "axios-auth-refresh": "^3.3.6",
     "bootstrap": "^5.3.3",
     "formik": "^2.4.6",
     "prop-types": "^15.8.1",
